[gd_scene load_steps=5 format=3 uid="uid://cdujd6aixsysg"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_0h1en"]
[ext_resource type="Texture2D" uid="uid://xo46nr0kicej" path="res://timer.png" id="2_5nosn"]
[ext_resource type="FontFile" uid="uid://bttn4sbekg567" path="res://alarm clock.ttf" id="3_cwmb5"]
[ext_resource type="AudioStream" uid="uid://bebeqotndjp35" path="res://finish.mp3" id="4_xowa2"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_0h1en")
metadata/_edit_horizontal_guides_ = [-289.0]

[node name="templine" type="Sprite2D" parent="."]
position = Vector2(587, 303)
scale = Vector2(0.323935, 0.326639)
texture = ExtResource("2_5nosn")

[node name="Tiempo" type="Label" parent="."]
offset_left = 478.0
offset_top = 226.0
offset_right = 676.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cwmb5")
theme_override_font_sizes/font_size = 73
text = "00:00"
vertical_alignment = 1

[node name="Decimas" type="Label" parent="."]
offset_left = 664.0
offset_top = 249.0
offset_right = 716.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cwmb5")
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Modo" type="Label" parent="."]
offset_left = 461.0
offset_top = 188.0
offset_right = 708.0
offset_bottom = 211.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cwmb5")

[node name="Estado" type="Label" parent="."]
offset_left = 468.0
offset_top = 312.0
offset_right = 702.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cwmb5")

[node name="BotonA" type="Button" parent="."]
offset_left = 773.0
offset_top = 320.0
offset_right = 784.0
offset_bottom = 334.0

[node name="BotonB" type="Button" parent="."]
offset_left = 643.0
offset_top = 374.0
offset_right = 717.0
offset_bottom = 449.0

[node name="BotonC" type="Button" parent="."]
offset_left = 542.0
offset_top = 379.0
offset_right = 604.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("3_cwmb5")
theme_override_font_sizes/font_size = 50
text = "S"

[node name="BotonD" type="Button" parent="."]
offset_left = 449.0
offset_top = 380.0
offset_right = 512.0
offset_bottom = 441.0
theme_override_fonts/font = ExtResource("3_cwmb5")
theme_override_font_sizes/font_size = 53
text = "R"

[node name="BotonE" type="Button" parent="."]
offset_left = 645.0
offset_top = 186.0
offset_right = 705.0
offset_bottom = 194.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="finish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xowa2")

[node name="Label" type="Label" parent="."]
offset_left = 426.0
offset_top = 504.0
offset_right = 750.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 20
text = "Por: Miguel Emir Rodriguez Pimentel"

[connection signal="pressed" from="BotonA" to="." method="_on_boton_a_pressed"]
[connection signal="pressed" from="BotonB" to="." method="_on_boton_b_pressed"]
[connection signal="pressed" from="BotonC" to="." method="_on_boton_c_pressed"]
[connection signal="pressed" from="BotonD" to="." method="_on_boton_d_pressed"]
[connection signal="pressed" from="BotonE" to="." method="_on_boton_e_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
